[gd_scene load_steps=2 format=3 uid="uid://b6jtlsv3r0mb3"]

[ext_resource type="Script" uid="uid://c5kgk35tbimm5" path="res://ui/scores/score_line.gd" id="1_qat7w"]

[node name="ScoreLine" type="HBoxContainer"]
script = ExtResource("1_qat7w")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Label"

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "123"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
